# OPIPP

./: .gitignore  LICENSE  README.md  pyproject.toml
OPIPP/: __init__.py  cooling.py  distribution.py  feature.py  features.py  graph.py  mosaic.py  pattern.py  scope.py  utils.py
examples/: HorizontalCell.py  Keeley19_1.py
examples/natural/HC/: F8-1-h-r.txt  F8-1-points-x.txt  F8-1-points-y.txt  F8-1-points.txt
examples/nature/HC/: F8-1-h-gammas.txt
examples/simulated/HC/: PIPP_0.losses  PIPP_0.points  PIPP_1.losses  PIPP_1.points  PIPP_10.losses  PIPP_10.points  PIPP_11.losses  PIPP_11.points  PIPP_12.losses  PIPP_12.points  PIPP_13.losses  PIPP_13.points  PIPP_14.losses  PIPP_14.points  PIPP_15.losses  PIPP_15.points  PIPP_16.losses  PIPP_16.points  PIPP_17.losses  PIPP_17.points  PIPP_18.losses  PIPP_18.points  PIPP_19.losses  PIPP_19.points  PIPP_2.losses  PIPP_2.points  PIPP_3.losses  PIPP_3.points  PIPP_4.losses  PIPP_4.points  PIPP_5.losses  PIPP_5.points  PIPP_6.losses  PIPP_6.points  PIPP_7.losses  PIPP_7.points  PIPP_8.losses  PIPP_8.points  PIPP_9.losses  PIPP_9.points  (+38 more)
scripts/: interact_estimate.R  parallel_simulate.py
tutorial/: 0.background.md  1.import.md  2.analysis.md  3.simulation.md  4.extension.md  4.external_tools.md  estimate_inter_ps.md  parallel_processing.md
