[project]
name = "OPIPP"
version = "0.1.1"
description = "A Python implementation of Optimization-based PIPP, a method for retinal mosaic simulation."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
  {name = "Liuyuan He", email = "liyhe@pku.edu.cn" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ # Optional
    "numpy >= 1.20.0",
    "scipy >= 1.9.0",
    "matplotlib >= 3.2.0",
    "networkx >= 2.0.0",
]

[project.urls]  # Optional
"Homepage" = "https://github.com/heliy/OPIPP"
"Bug Reports" = "https://github.com/heliy/OPIPP/issues"
"Source" = "https://github.com/heliy/OPIPP/"

[tool.setuptools]
package-data = {"sample" = ["*.points", "*.losses", "*.txt", "*.png", "*.md"]}
packages = ["OPIPP"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"